[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/assets/Fonts/Luna.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/scripts/Settings.gd" type="Script" id=2]
[ext_resource path="res://src/assets/GUI/Buttons/Hover_button.png" type="Texture" id=4]
[ext_resource path="res://src/assets/GUI/Buttons/Normal_button.png" type="Texture" id=5]
[ext_resource path="res://src/assets/GUI/Buttons/Click_button.png" type="Texture" id=6]
[ext_resource path="res://src/assets/GUI/Menu.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=4]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=6]

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="Settings" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -470.0
margin_top = -349.0
margin_right = 470.0
margin_bottom = 349.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="TextureRect/VBoxContainer"]
margin_right = 940.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Settings"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/VBoxContainer"]
margin_top = 252.0
margin_right = 940.0
margin_bottom = 690.0
custom_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/VBoxContainer/VBoxContainer"]
margin_right = 940.0
margin_bottom = 111.0

[node name="VolumeLabel" type="Label" parent="TextureRect/VBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 940.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="TextureRect/VBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 940.0
margin_bottom = 111.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="HBoxContainer" parent="TextureRect/VBoxContainer/VBoxContainer"]
margin_top = 161.0
margin_right = 940.0
margin_bottom = 252.0
custom_constants/separation = 100

[node name="FullscreenCheckbox" type="CheckBox" parent="TextureRect/VBoxContainer/VBoxContainer/VBoxContainer2"]
margin_right = 226.0
margin_bottom = 91.0
focus_mode = 0
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/check_vadjust = 0
enabled_focus_mode = 0
text = "Fullscreen"

[node name="BackButton" type="TextureButton" parent="TextureRect/VBoxContainer/VBoxContainer"]
margin_top = 302.0
margin_right = 940.0
margin_bottom = 438.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/VBoxContainer/BackButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -53.0
margin_right = 50.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="TextureRect/VBoxContainer/VBoxContainer/VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="TextureRect/VBoxContainer/VBoxContainer/VBoxContainer2/FullscreenCheckbox" to="." method="_on_FullscreenCheckbox_toggled"]
[connection signal="pressed" from="TextureRect/VBoxContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
